# chronomarker

./: .gitignore  .gitmodules  LICENSE  README.md
NetPebble/: BinaryWriterExtensions.cs  NetPebble.csproj
NetPebble.DevTest/: NetPebble.DevTest.csproj  Program.cs
NetPebble/Protocol/: AppMessage.cs  IPebblePacket.cs
NetPebble/Transports/: BluetoothClassicTransport.cs  ITransport.cs  WebsocketTransport.cs
chronomarker-gui/: AboutBox.cs  App.axaml  App.axaml.cs  EnumBindingSource.cs  GameMessage.cs  LPV6.cs  MainForm.Designer.cs  MainForm.cs  MyProgressBar.cs  Program.cs  StatusView.Designer.cs  StatusView.cs  chronomarker-gui.csproj  chronomarker-gui.sln
chronomarker-gui-old/: AboutBox.Designer.cs  AboutBox.cs  LPV6.cs  MainForm.Designer.cs  StatusView.cs
chronomarker-gui.Desktop/: Program.cs  app.manifest  chronomarker-gui.Desktop.csproj
chronomarker-sfse/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  main.cpp  offsets.h
chronomarker-sfse/commonlibsf-rel/: README.txt  VersionDatabase.cpp  VersionDatabase.h
chronomarker-sfse/include/: Hooks.h  PCH.h
chronomarker-sfse/src/: Hooks.cpp  Main.cpp  Settings.cpp
chronomarker-watch/: applist.json  architekt15.js  dickens-polyfill.js  starfield.app.js  starfield.full.js  starfield.img  starfield.info  test-protocol.js
imageconverter/: README.md  heatshrink-wrapper.js  imageconverter.js  imageconvertercli.js  package-lock.json  package.json
pebbleapp/: .devcontainer.json  .gitignore  package.json  test-message.py
pebbleapp-resources/: main.pdn  scanning.pdn  status-icons.pdn  status.pdn
(+39 files in other folders)
